# SDLCPPplay

./: .gitignore  CMakeLists.txt  InputHandler.cpp  InputHandler.h  MovementManager.cpp  MovementManager.h  README.md  main.cpp
GameObjects/: Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  Tile.cpp  Tile.h
GameObjects/Components/: ActMover.cpp  ActMover.h  ActRenderer.cpp  ActRenderer.h
